Fix #21240 - [Feature] Added eanCode field to suppliers

--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-form-config.xml
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-form-config.xml
@@ -3844,6 +3844,7 @@
 					<show id="cm:description" />
 					<show id="bcpg:code" />
 					<show id="bcpg:erpCode" force="true" />
+					<show id="bcpg:eanCode" force="true" />
 					<show id="bcpg:supplierAccountRef" />
 					<show id="bcpg:supplierTel" />
 					<show id="bcpg:supplierEmail" />
@@ -3963,6 +3964,7 @@
 					</field>
 					<field id="bcpg:code" read-only="true" set="mainInfo" />
 					<field id="bcpg:erpCode" set="mainInfo" />
+					<field id="bcpg:eanCode" set="mainInfo" />
 					<field id="bcpg:supplierAccountRef" set="mainInfo" />
 					<field id="bcpg:supplierTel" set="mainInfo" />
 					<field id="bcpg:supplierEmail" set="mainInfo">
