--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-form-config.xml
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-form-config.xml
@@ -3276,6 +3276,7 @@
 					<show id="cm:name" />
 					<show id="cm:title" force="true" />
 					<show id="cm:description" force="true" />
+					<show id="gs1:certificationCode" force="true" />
 					<show id="bcpg:certificationAgency" force="true" />
 					<show id="bcpg:certificationStandard" force="true" />
 					<show id="bcpg:certificationNote" force="true" />
@@ -3288,6 +3289,7 @@
 					<field id="cm:name" set="2-col" />
 					<field id="cm:title" set="2-col" />
 					<field id="cm:description" set="2-col" />
+					<field id="gs1:certificationCode" set="2-col" />
 					<field id="bcpg:certificationAgency" set="2-col" />
 					<field id="bcpg:certificationStandard" set="2-col" />
 					<field id="bcpg:certificationNote" set="2-col" />
@@ -3314,6 +3316,7 @@
 					<show id="cm:name" />
 					<show id="cm:title" force="true" />
 					<show id="cm:description" force="true" />
+					<show id="gs1:certificationCode" force="true" />
 					<show id="bcpg:certificationAgency" force="true" />
 					<show id="bcpg:certificationStandard" force="true" />
 					<show id="bcpg:certificationNote" force="true" />
@@ -3329,6 +3332,7 @@
 					<field id="cm:name" set="2-col" />
 					<field id="cm:title" set="2-col" />
 					<field id="cm:description" set="2-col" />
+					<field id="gs1:certificationCode" set="2-col" />
 					<field id="bcpg:certificationAgency" set="2-col" />
 					<field id="bcpg:certificationStandard" set="2-col" />
 					<field id="bcpg:certificationNote" set="2-col" />
@@ -3365,6 +3369,7 @@
 					<show id="cm:name" />
 					<show id="cm:title" force="true" />
 					<show id="cm:description" force="true" />
+					<show id="gs1:certificationCode" force="true" />
 					<show id="bcpg:certificationAgency" force="true" />
 					<show id="bcpg:certificationStandard" force="true" />
 					<show id="bcpg:certificationNote" force="true" />
@@ -3377,6 +3382,7 @@
 					<field id="cm:name" set="2-col" />
 					<field id="cm:title" set="2-col" />
 					<field id="cm:description" set="2-col" />
+					<field id="gs1:certificationCode" set="2-col" />
 					<field id="bcpg:certificationAgency" set="2-col" />
 					<field id="bcpg:certificationStandard" set="2-col" />
 					<field id="bcpg:certificationNote" set="2-col" />
@@ -3404,6 +3410,7 @@
 					<show id="cm:name" />
 					<show id="cm:title" force="true" />
 					<show id="cm:description" force="true" />
+					<show id="gs1:certificationCode" force="true" />
 					<show id="bcpg:certificationAgency" force="true" />
 					<show id="bcpg:certificationStandard" force="true" />
 					<show id="bcpg:certificationNote" force="true" />
@@ -3419,6 +3426,7 @@
 					<field id="cm:name" set="2-col" />
 					<field id="cm:title" set="2-col" />
 					<field id="cm:description" set="2-col" />
+					<field id="gs1:certificationCode" set="2-col" />
 					<field id="bcpg:certificationAgency" set="2-col" />
 					<field id="bcpg:certificationStandard" set="2-col" />
 					<field id="bcpg:certificationNote" set="2-col" />
@@ -3457,6 +3465,7 @@
 					<show id="cm:name" />
 					<show id="cm:title" force="true" />
 					<show id="cm:description" force="true" />
+					<show id="gs1:certificationCode" force="true" />
 					<show id="bcpg:certificationStandard" force="true" />
 					<show id="bcpg:certificationAgency" force="true" />
 					<show id="bcpg:certificationNote" force="true" />
@@ -3470,6 +3479,7 @@
 					<show id="cm:name" />
 					<show id="cm:title" force="true" />
 					<show id="cm:description" force="true" />
+					<show id="gs1:certificationCode" force="true" />
 					<show id="bcpg:certificationStandard" force="true" />
 					<show id="bcpg:certificationAgency" force="true" />
 					<show id="bcpg:certificationNote" force="true" />
