--- a/becpg-plm/becpg-plm-share/src/main/assembly/web/components/images/filetypes/filetypes-index.html
+++ b/becpg-plm/becpg-plm-share/src/main/assembly/web/components/images/filetypes/filetypes-index.html
@@ -83,6 +83,12 @@
 			<td  valign="bottom">Raw material</td>
 		</tr>
 		<tr>
+			<td  valign="bottom"><img src='generic-logisticUnit-16.png' alt="" /></td>
+			<td  valign="bottom"><img src='generic-logisticUnit-32.png' alt="" /></td>
+			<td  valign="bottom"><img src='generic-logisticUnit-48.png' alt="" /></td>
+			<td  valign="bottom">Logistic unit</td>
+		</tr>
+		<tr>
 			<td  valign="bottom"><img src='generic-nc-16.png' alt="" /></td>
 			<td  valign="bottom"><img src='generic-nc-32.png' alt="" /></td>
 			<td  valign="bottom"><img src='generic-nc-48.png' alt="" /></td>
