--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-form-config.xml
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-form-config.xml
@@ -1716,6 +1716,7 @@
 					<show id="bcpg:regulatoryCode" force="true" />
 					<show id="bcpg:ingTypeV2" force="true" />
 					<show id="bcpg:erpCode" force="true" />
+					<show id="bcpg:parentEntityRef" force="true" />
 					<show id="bcpg:isDeleted" />
 				</field-visibility>
 				<appearance>
@@ -1731,6 +1732,15 @@
 							</control-param>
 						</control>
 					</field>
+					<field id="bcpg:parentEntityRef"  mandatory="false" read-only="false">
+						<control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
+							<control-param name="ds">becpg/autocomplete/targetassoc/associations/bcpg:rawMaterial
+							</control-param>
+							<control-param name="pageLinkTemplate">entity-data-lists?list=View-properties&amp;nodeRef={nodeRef}
+							</control-param>
+							<control-param name="excludeSources">true</control-param>
+						</control>
+					</field>
 					<field id="bcpg:isDeleted">
 						<control template="/org/alfresco/components/form/controls/selectone.ftl">
 							<control-param name="isSearch">true</control-param>
@@ -1739,6 +1749,7 @@
 							</control-param>
 						</control>
 					</field>
+					
 				</appearance>
 			</form>
 			<form id="sub-datagrid-filter">
