Fix #19917 - [Feature] Fixed compoListProduct autocomplete creation form

--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-form-config.xml
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-form-config.xml
@@ -5078,6 +5078,68 @@
 					</field>
 				</appearance>
 			</form>
+			<form id="create-logisticUnit">
+				<field-visibility>
+					<show id="bcpg:compoListProduct" />
+					<show id="bcpg:compoListQtySubFormula" />
+					<show id="bcpg:compoListUnit" />
+					<show id="bcpg:parentLevel" />
+					<show id="bcpg:compoListYieldPerc" />
+					<show id="bcpg:compoListLossPerc" />
+					<show id="bcpg:compoListDeclType" />
+					<show id="bcpg:variantIds" force="true" />
+					<show id="bcpg:instruction" force="true" />
+				</field-visibility>
+
+				<appearance>
+					<set id="1-col-1" />
+					<set id="2-col-1" template="/org/alfresco/components/form/2-column-set.ftl" />
+					<set id="1-col-2" />
+					<set id="2-col-2" template="/org/alfresco/components/form/2-column-set.ftl" />
+					<set id="1-col-3" />
+
+					<field id="bcpg:compoListProduct" help-id="becpg.forms.help.compoListProduct" set="1-col-1">
+						<control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
+              			<control-param name="ds">becpg/autocomplete/product?classNames=bcpg:finishedProduct,bcpg:localSemiFinishedProduct%5E2,bcpg:semiFinishedProduct%5E2,bcpg:logisticUnit%5E2</control-param>
+						</control>
+					</field>
+					<field id="bcpg:compoListQtySubFormula" set="2-col-1" help-id="becpg.forms.help.compoListQtySubFormula" />
+					<field id="bcpg:compoListUnit" set="2-col-1">
+						<control template="/org/alfresco/components/form/controls/selectone.ftl">
+							<control-param name="isStoreable">true</control-param>
+						</control>
+					</field>
+					<field id="bcpg:parentLevel" help-id="becpg.forms.help.parentLevel" set="1-col-2">
+						<control template="/org/alfresco/components/form/controls/autocomplete.ftl">
+							<control-param name="ds">becpg/autocomplete/compoListParentLevel
+							</control-param>
+						</control>
+					</field>
+
+					<field id="bcpg:compoListYieldPerc" set="2-col-2" help-id="becpg.forms.help.compoListYieldPerc" />
+					<field id="bcpg:compoListLossPerc" set="2-col-2" help-id="becpg.forms.help.compoListLossPerc" />
+
+
+					<field id="bcpg:compoListDeclType" set="2-col-2">
+						<control template="/org/alfresco/components/form/controls/selectone.ftl">
+							<control-param name="isStoreable">true</control-param>
+						</control>
+					</field>
+
+					<field id="bcpg:variantIds" help-id="becpg.forms.help.variantIds" set="2-col-2">
+						<control template="/org/alfresco/components/form/controls/autocomplete.ftl">
+							<control-param name="ds">becpg/autocomplete/variantList
+							</control-param>
+						</control>
+					</field>
+
+					<field id="bcpg:instruction" set="1-col-3">
+						<control template="/org/alfresco/components/form/controls/richtext.ftl">
+							<control-param name="rows">10</control-param>
+						</control>
+					</field>
+				</appearance>
+			</form>
 
 			<form id="full-screen">
 				<field-visibility>
@@ -5346,6 +5408,96 @@
 					<field id="bcpg:compoListProduct" help-id="becpg.forms.help.compoListProduct" set="1-col-1">
 						<control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
 							<control-param name="ds">becpg/autocomplete/product?classNames=bcpg:rawMaterial%5E4,bcpg:finishedProduct,bcpg:localSemiFinishedProduct%5E2,bcpg:semiFinishedProduct%5E2
+							</control-param>
+						</control>
+					</field>
+					<field id="bcpg:compoListQtySubFormula" help-id="becpg.forms.help.compoListQtySubFormula" set="2-col-1" />
+					<field id="bcpg:compoListUnit" set="2-col-1">
+						<control template="/org/alfresco/components/form/controls/selectone.ftl">
+						</control>
+					</field>
+
+
+					<field id="bcpg:parentLevel" help-id="becpg.forms.help.parentLevel" set="1-col-2">
+						<control template="/org/alfresco/components/form/controls/autocomplete.ftl">
+							<control-param name="ds">becpg/autocomplete/compoListParentLevel
+							</control-param>
+							<control-param name="urlParamsToPass">itemId</control-param>
+						</control>
+					</field>
+
+					<field id="bcpg:compoListYieldPerc" help-id="becpg.forms.help.compoListYieldPerc" set="2-col-2" />
+					<field id="bcpg:compoListLossPerc" help-id="becpg.forms.help.compoListLossPerc" set="2-col-2" />
+
+
+					<field id="bcpg:compoListDeclType" set="2-col-2">
+						<control template="/org/alfresco/components/form/controls/selectone.ftl">
+						</control>
+					</field>
+
+					<field id="bcpg:variantIds" help-id="becpg.forms.help.variantIds" set="2-col-2">
+						<control template="/org/alfresco/components/form/controls/autocomplete.ftl">
+							<control-param name="ds">becpg/autocomplete/variantList
+							</control-param>
+							<control-param name="urlParamsToPass">itemId</control-param>
+						</control>
+					</field>
+
+					<field id="bcpg:startEffectivity" set="2-col-2">
+						<control template="/org/alfresco/components/form/controls/date.ftl">
+							<control-param name="showTime">false</control-param>
+						</control>
+					</field>
+					<field id="bcpg:endEffectivity" set="2-col-2">
+						<control template="/org/alfresco/components/form/controls/date.ftl">
+							<control-param name="showTime">false</control-param>
+						</control>
+					</field>
+			<!-- 	    
+				   <field id="bcpg:propagatedCharacts"   set="1-col-3">
+						<control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
+					    	 <control-param name="ds">becpg/autocomplete/DataListCharact?path=bcpg:compoListProduct&amp;className=bcpg:nutList&amp;attributeName=bcpg:nutListNut&amp;filter=itemAsEntity</control-param>
+ 					  	   <control-param name="urlParamsToPass">itemId</control-param>
+						</control>
+					</field>
+					
+					 -->
+					<field id="bcpg:instruction" set="1-col-3">
+						<control template="/org/alfresco/components/form/controls/richtext.ftl">
+							<control-param name="rows">10</control-param>
+						</control>
+					</field>
+				</appearance>
+			</form>
+			
+			<form id="edit-logisticUnit">
+				<field-visibility>
+					<show id="bcpg:compoListProduct" />
+
+					<show id="bcpg:compoListQtySubFormula" />
+					<show id="bcpg:compoListUnit" />
+
+					<show id="bcpg:parentLevel" />
+
+					<show id="bcpg:compoListYieldPerc" />
+					<show id="bcpg:compoListLossPerc" />
+					<show id="bcpg:compoListDeclType" />
+					<show id="bcpg:variantIds" force="true" />
+					<show id="bcpg:startEffectivity" force="true" />
+					<show id="bcpg:endEffectivity" force="true" />
+				 	<!-- <show id="bcpg:propagatedCharacts" force="true" />  -->
+					<show id="bcpg:instruction" force="true" />
+				</field-visibility>
+
+				<appearance>
+					<set id="1-col-1" />
+					<set id="2-col-1" template="/org/alfresco/components/form/2-column-set.ftl" />
+					<set id="1-col-2" />
+					<set id="2-col-2" template="/org/alfresco/components/form/2-column-set.ftl" />
+					<set id="1-col-3" />
+					<field id="bcpg:compoListProduct" help-id="becpg.forms.help.compoListProduct" set="1-col-1">
+						<control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
+							<control-param name="ds">becpg/autocomplete/product?classNames=bcpg:finishedProduct,bcpg:localSemiFinishedProduct%5E2,bcpg:semiFinishedProduct%5E2,bcpg:logisticUnit%5E2
 							</control-param>
 						</control>
 					</field>
