--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-rm-form-config.xml
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-rm-form-config.xml
@@ -74,6 +74,8 @@
 		  <show force="false" id="gs1:alcoholBeverageDistilledFromCode"/>
 		  <show force="false" id="gs1:alcoholBeverageProductionMethodTypeCode"/>
 		  
+		  <show force="true" id="bcpg:productSpecifications"/>
+		  
           <show force="true" id="bcpg:ingTypeV2"/>
           <show force="true" id="bcpg:ingCEECode"/>
           <show force="true" id="bcpg:useByDate"/>
@@ -226,6 +228,14 @@
             </control>
           </field>
           <field id="pjt:projectScore" mandatory="false" read-only="false" set="mainInfo"/>
+          <set appearance="bordered-panel" id="formulation" label-id="becpg.forms.set.formulation.label" template="/org/alfresco/components/form/3-column-set.ftl"/>
+		  <field help-id="becpg.forms.help.productSpecifications" id="bcpg:productSpecifications" mandatory="false" read-only="false" set="formulation">
+            <control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
+              <control-param name="pageLinkTemplate">entity-data-lists?list=View-properties&amp;nodeRef={nodeRef}
+								</control-param>
+              <control-param name="style">width:200px</control-param>
+            </control>
+          </field>
           <set appearance="bordered-panel" id="consumer" label-id="becpg.forms.set.consumer.label" template="/org/alfresco/components/form/2-column-set.ftl"/>
           <field id="bcpg:productUnit" mandatory="false" read-only="false" set="consumer">
             <control template="/org/alfresco/components/form/controls/product-unit.ftl">
@@ -652,6 +662,7 @@
           <show force="false" id="bcpg:productUnit"/>
           <show force="true" id="bcpg:netWeight"/>
           <show force="false" id="bcpg:productDensity"/>
+          <show force="true" id="bcpg:productSpecifications"/>
         </field-visibility>
         <appearance>
           <field id="cm:name" mandatory="false" read-only="false"/>
@@ -669,6 +680,12 @@
             </control>
           </field>
           <field id="bcpg:productDensity" mandatory="false" read-only="false"/>
+          <field id="bcpg:productSpecifications" mandatory="false" read-only="false">
+            <control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
+              <control-param name="pageLinkTemplate">entity-data-lists?list=View-properties&amp;nodeRef={nodeRef}
+              </control-param>
+            </control>
+          </field>
         </appearance>
       </form>
       <form id="nutList">
@@ -727,6 +744,8 @@
           <show force="false" id="bcpg:diluentRef"/>
           <show force="false" id="bcpg:targetReconstitutionRef"/>
           <show force="false" id="bcpg:evaporatedRate"/>
+          
+          <show force="true" id="bcpg:productSpecifications"/>
           
           <show force="true" id="bcpg:ingTypeV2"/>
           <show force="true" id="bcpg:ingCEECode"/>
@@ -804,6 +823,14 @@
           <field id="bcpg:supplierRefCode" mandatory="false" read-only="false" set="mainInfo"/>
           <field id="bcpg:plants" mandatory="false" read-only="false" set="mainInfo"/>
           <field id="bcpg:productGeoOrigin" mandatory="false" read-only="false" set="mainInfo"/>
+          <set appearance="bordered-panel" id="formulation" label-id="becpg.forms.set.formulation.label" template="/org/alfresco/components/form/3-column-set.ftl"/>
+          <field id="bcpg:productSpecifications" mandatory="false" read-only="false" set="formulation">
+            <control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
+              <control-param name="pageLinkTemplate">entity-data-lists?list=View-properties&amp;nodeRef={nodeRef}
+							</control-param>
+              <control-param name="style">width:200px</control-param>
+            </control>
+          </field>
           <set appearance="bordered-panel" id="consumer" label-id="becpg.forms.set.consumer.label" template="/org/alfresco/components/form/2-column-set.ftl"/>
           <field id="bcpg:productUnit" mandatory="false" read-only="false" set="consumer">
             <control template="/org/alfresco/components/form/controls/product-unit.ftl">
@@ -1290,6 +1317,7 @@
           <show force="true" id="bcpg:targetReconstitutionRef"/>
           <show force="true" id="bcpg:evaporatedRate"/>
           <show force="true" id="bcpg:meatType"/>
+          <show force="true" id="bcpg:productSpecifications"/>
           <show force="true" id="bcpg:ingTypeV2"/>
           <show force="true" id="bcpg:ingCEECode"/>
           <show force="true" id="bcpg:useByDate"/>
@@ -1403,6 +1431,14 @@
             </control>
           </field>
           <field id="pjt:projectScore" mandatory="false" read-only="false" set="mainInfo"/>
+          <set appearance="bordered-panel" id="formulation" label-id="becpg.forms.set.formulation.label" template="/org/alfresco/components/form/3-column-set.ftl"/>
+          <field help-id="becpg.forms.help.productSpecifications" id="bcpg:productSpecifications" mandatory="false" read-only="false" set="formulation">
+            <control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
+              <control-param name="pageLinkTemplate">entity-data-lists?list=View-properties&amp;nodeRef={nodeRef}
+								</control-param>
+              <control-param name="style">width:200px</control-param>
+            </control>
+          </field>
           <set appearance="bordered-panel" id="consumer" label-id="becpg.forms.set.consumer.label" template="/org/alfresco/components/form/2-column-set.ftl"/>
           <field id="bcpg:productUnit" mandatory="false" read-only="false" set="consumer">
             <control template="/org/alfresco/components/form/controls/product-unit.ftl">
