Fix #23217 -[Feature] Add product list view

--- a/becpg-plm/becpg-plm-share/src/main/assembly/web/components/product/product-list.css
+++ b/becpg-plm/becpg-plm-share/src/main/assembly/web/components/product/product-list.css
@@ -166,3 +166,10 @@
 	clear: both;
 	margin-bottom: 0.5em;
 }
+
+
+/* Data Table */
+.product-list .datagrid div.grid {
+	height: calc(100vh - 260px);
+}
+
