Fix #23217 -[Feature] Add product list view

--- a/becpg-plm/becpg-plm-share/src/main/assembly/web/components/product/product-list.css
+++ b/becpg-plm/becpg-plm-share/src/main/assembly/web/components/product/product-list.css
@@ -169,7 +169,13 @@
 
 
 /* Data Table */
-.product-list .datagrid div.grid {
-	height: calc(100vh - 260px);
+
+.sticky-footer, .sticky-push {
+	display:none;
 }
+
+.product-list .datagrid div.grid {
+	height: calc(100vh - 215px);
+}
+
 
